--- a/about.html
+++ b/about.html
@@ -1,1 +1,8 @@
-<h1> This is about us page.</h1>
+<!DOCTYPE html>
+<html>
+    <head>
+    </head>
+    <body>
+        Read Abount Us 
+    </body>
+</html>
